Refactor DESIGN-11: Created implemetation for States to remove redudant classes